[gd_scene load_steps=17 format=3 uid="uid://bkwkl4n2s3fd7"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_4hp3x"]
[ext_resource type="AudioStream" uid="uid://dkxjdw30lp2q0" path="res://Audio/SFX - Death Explosion.ogg" id="2_mhlnf"]
[ext_resource type="AudioStream" uid="uid://bbwy0nmuyhmb0" path="res://Audio/SFX - Success.ogg" id="3_drr1x"]
[ext_resource type="AudioStream" uid="uid://bcqsftrdxruvl" path="res://Audio/SFX - Main engine thrust.ogg" id="4_nqu4d"]
[ext_resource type="PackedScene" uid="uid://cpdgh027k71if" path="res://Particles/booster_particles.tscn" id="5_0cy8c"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="6_1vlc7"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="7_qnuc6"]

[sub_resource type="CylinderMesh" id="CylinderMesh_lc7ax"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_axhhd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8o6gj"]
albedo_color = Color(0.825786, 0.131347, 0.137537, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_lr585"]
material = SubResource("StandardMaterial3D_8o6gj")
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_3fw1a"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nurj"]
albedo_color = Color(0.827451, 0.129412, 0.137255, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_dj73y"]
material = SubResource("StandardMaterial3D_5nurj")
top_radius = 0.2
bottom_radius = 0.3
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_000qi"]
albedo_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_m6grq"]
material = SubResource("StandardMaterial3D_000qi")
top_radius = 0.23
bottom_radius = 0.23
height = 0.2

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
mass = 0.08
max_contacts_reported = 10
contact_monitor = true
linear_damp = 3.0
script = ExtResource("1_4hp3x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_lc7ax")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00487375, 0, 0)
shape = SubResource("CylinderShape3D_axhhd")

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_mhlnf")
volume_db = 22.342

[node name="SuccessAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_drr1x")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_nqu4d")

[node name="BoosterParticles" parent="." instance=ExtResource("5_0cy8c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.956963, 0)

[node name="RightBoosterParticles" parent="." instance=ExtResource("5_0cy8c")]
transform = Transform3D(0.924006, -0.382377, 0, 0.382377, 0.924006, 0, 0, 0, 1, 0.415283, -0.956963, 0)

[node name="leftBoosterParticles" parent="." instance=ExtResource("5_0cy8c")]
transform = Transform3D(0.921348, 0.388738, 0, -0.388738, 0.921348, 0, 0, 0, 1, -0.449238, -0.956963, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_1vlc7")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_qnuc6")]

[node name="Rocket" type="MeshInstance3D" parent="."]

[node name="Cockpit" type="MeshInstance3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.67572e-05, 0.75, 0.00234556)
mesh = SubResource("CylinderMesh_lr585")
skeleton = NodePath("../..")

[node name="Body" type="MeshInstance3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.25, 2.08165e-12)
mesh = SubResource("CylinderMesh_3fw1a")
skeleton = NodePath("../..")

[node name="BoosterBase" type="MeshInstance3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.895592, 0)
mesh = SubResource("CylinderMesh_dj73y")
skeleton = NodePath("../..")

[node name="CenterBody" type="MeshInstance3D" parent="Rocket"]
mesh = SubResource("CylinderMesh_m6grq")
skeleton = NodePath("../..")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
